Worked to get CRA running

--- a/src/assets/scss/theme/_variables.scss
+++ b/src/assets/scss/theme/_variables.scss
@@ -583,7 +583,7 @@ $avatar-title-color: $white !default;
 
 // Paths
 
-$path-to-img: '../img' !default;
+$path-to-img: '../../img' !default;
 
 // Icons
 
