finished NavBar and added Section

--- a/src/assets/scss/theme/_navbar.scss
+++ b/src/assets/scss/theme/_navbar.scss
@@ -106,7 +106,7 @@
     background-color: $dropdown-bg;
     border-radius: $dropdown-border-radius;
     box-shadow: $box-shadow-dark-lg;
-    overflow-y: scroll; // This has to be scroll for iOS bounce scroll
+    // overflow-y: scroll; This has to be scroll for iOS bounce scroll
     -webkit-overflow-scrolling: touch;
   }
 
